# ethereum

./: CMakeLists.txt
ethminer/: CMakeLists.txt  MinerAux.h
libethcore/: CMakeLists.txt
lllc/: CMakeLists.txt
